--- a/sts-workspace/anuncios-backend-apirest/pom.xml
+++ b/sts-workspace/anuncios-backend-apirest/pom.xml
@@ -60,13 +60,13 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.5.0.RELEASE</version>
+			<version>2.3.4.RELEASE</version> <!-- Respetar esta versión -->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-			<version>1.1.1.RELEASE</version>
+			<version>1.0.9.RELEASE</version> <!-- Respetar esta versión -->
 		</dependency>
 		<!-- Sólo para JDK9+ -->
 		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
